# mid-level-clouds

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  script.py
cloud_top_height/: cloud_top_from_wales.py
gate_comparison/: distributions.py  rh2d_histogram.py  rh_segments.py  stability.py  temperature_comparison.py
lam_compare/: iwv_plot.py  lam_vs_sondes.py  palmer_plain.py  palmer_plane.py  palmer_plots.py  wvel.py
ml_clouds/: clear_sky_convergence.py  heating_rates.py  omega_split.py  skew_t.py
mlclouds/: cloud_geometry.py  omega_div.py  stability_and_rain.py
mlclouds/gate_comparison/: orcestra_itcz.py  stability.py
mlclouds/lam_orcestra/: helper.py  select_sondes.py
mlclouds/ml_clouds/: clear_sky_convergence.py  diurnal_cycle.py  heating_rates.py  mse_n2.py  prepare_csc_data.py  rh_warming_world.py  skew_t.py
mlclouds/myutils/: data_helper.py  moist_adiabats.py  open_datasets.py  physics_helper.py  plot_helper.py
mlclouds/radiation_for_sondes/: arts3_ref_atm.nc  comparison.ipynb  environment.yml  flux_tests.ipynb  preprocessing.ipynb
mlclouds/radiation_for_sondes/arts2/: calc_flux.py  flux_calculation.ipynb
mlclouds/radiation_for_sondes/rrtmg/: angles.py  environment.yaml  example_atm_flxs.nc  idealized.py  rad_helper.py  rrtmg_ex.py  run_rrtmg.py  test.ipynb
myutils/: constants_and_values.py  data_helper.py  open_datasets.py  physics_helper.py
radiation_for_sondes/: get_radiation_atmospheres.py  get_sonde_atmospheres.py  preprocessing.ipynb
radiation_for_sondes/arts2/: calc_flux.py  flux_calc.py
